# cidl_student

./: .gitignore  live.ipynb  main.py  pyproject.toml
Lecture 1/: sgd-loss.ipynb
Lecture 1/lock/: Exercises.pptx
Lecture 2/: l2_ex1.ipynb  l2_exercises.ipynb
Lecture 2/lock/: ex1.ipynb  ex2.ipynb
Lecture 3/: l3_ex1.ipynb
Lecture 3/lock/: ex0.ipynb  ex2.ipynb
Lecture 4/: dataset.ipynb
Lecture 5/lock/: ex1.ipynb  ex2.ipynb
Lecture 6/: live_ex1.ipynb
Lecture 8/lock/: ex1.ipynb  ex2.ipynb  ex3.ipynb
Recap 1/lock/: ex1.ipynb
cidl_student.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
